# onnc-cim

./: .gitignore  CMakeLists.txt  ONNC-CIM-README.md
include/onnc/Config/: Config.h.cmake.in  Config.h.in
include/onnc/Diagnostic/: DiagCommonKinds.inc
include/onnc/IR/: Quadruple.h
include/onnc/Runtime/: BasicComputeEngine.h  ComputeEngine.h  Interpreter.h
lib/: CMakeLists.txt  Makefile.am
lib/IR/: Quadruple.cpp
lib/Runtime/: BasicComputeEngine.cpp  CMakeLists.txt
lib/Transforms/TensorSel/: CMakeLists.txt
m4/: onnc-target.m4
skysim/: Makefile
skysim/fastsim/: Makefile  Makefile.objs  fast_model.cc  main.cc  operator.cc
skysim/include/fastsim/: fast_model.hh  fastmodel-define.h  operator.hh  register-fast_model.h
skysim/include/sim-module/: bus.hh  channel.hh  dram.hh  eventq.hh  fifo.hh  fifo_if.hh  if_base.hh  message.hh  minitrace.h  mmap_device.hh  optional.hh  request_pool.hh  signal.hh  signal_if.hh  sim_memory.hh  sim_object.hh  sram.hh  statistics.hh  trace.hh
skysim/onnc-cimHW/: .gitignore  CMakeLists.txt  README.md  quick.sh
skysim/onnc-cimHW/docs/: How_to_implement_a_new_operator_in_onnc-cimHW.md  How_to_write_a_program_calling_onnc-cimHW.md
skysim/onnc-cimHW/example/: CMakeLists.txt  main.cc  matmul-layer.cc
skysim/onnc-cimHW/include/: abstractOpFactory.hh  cimHWOp.hh  cimHWSimulator.hh
skysim/onnc-cimHW/lib/: CMakeLists.txt  cimHWOp.cc  cimHWSimulator.cc  conv.cc  conv.hh  gemm.cc  gemm.hh  op.template.cc  op.template.hh
skysim/onnc-cimHW/lib/diagnostic/: diagEngine.cc  diagEngine.hh  msgHandling.hh
skysim/onnc-cimHW/lib/factory/: abstractOpFactory.cc  cimHWOpFactory.cc  cimHWOpFactory.hh  createOpFactory.hh
skysim/onnc-cimHW/lib/hardware/: BitlineReceiver.cc  BitlineReceiver.hh  ComputeUnit.cc  ComputeUnit.hh  CrossBarArray.cc  CrossBarArray.hh  CrossBarUnit.cc  CrossBarUnit.hh  WordLineDriver.cc  WordLineDriver.hh  types.hh
skysim/onnc-cimHW/lib/wrapper/: fastSimWrapper.cc  fastSimWrapper.hh
skysim/onnc-cimHW/scripts/: abstractOpFactory.func.template.cc  abstractOpFactory.func.template.hh  abstractOpFactory.template.cc  abstractOpFactory.template.hh  cimHWSimulator.func.template.cc  cimHWSimulator.func.template.hh  cimHWSimulator.template.cc  cimHWSimulator.template.hh  code_generator.py  fastSimWrapper.class.template.cc  fastSimWrapper.class.template.hh  fastSimWrapper.template.cc  fastSimWrapper.template.hh
skysim/onnc-cimHW/share/: CMakeLists.txt  cimConfig.json  cimConfig_16-16.json  cimConfig_errorModel.json  errorTable.json
skysim/onnc-cimHW/share/googlenet_imagenet/: dog-231.pb
skysim/onnc-cimHW/tests/: CMakeLists.txt  configFile.hh  test_BitlineReceiver.cc  test_ComputeUnit.cc  test_CrossBarArray.cc  test_CrossBarUnit.cc  test_WordlineDriver.cc  test_all.cc  test_conv.cc  test_gemm.cc
skysim/sim-module/: Makefile.objs  bus.cc  minitrace.c  sim_object.cc  statistics.cc  trace.cc
tools/onnc/: CMakeLists.txt  main.cpp
tools/onni/: CMakeLists.txt  InterpreterPass.cpp
tools/unittests/: CMakeLists.txt
